--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="heder-link link current" href="./index.html">Студия</a>
+              <a class="header-link link current" href="./index.html">Студия</a>
             </li>
             <li class="header-item">
-              <a class="heder-link link" href="./portfolio.html">Портфолио</a>
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="header-item">
-              <a class="heder-link link" href="">Контакты</a>
+              <a class="header-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="header-connection list">
-          <li class="header-link">
+          <li class="header-connection-link">
             <a class="header-mail link" href="meiltoinfo@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-link">
+          <li class="header-connection-link">
             <a class="header-tell link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
@@ -57,7 +57,7 @@
           <button type="button" class="hero-btn">Заказать услугу</button>
         </div>
       </section>
-      <section class="about">
+      <section class="about section">
         <div class="container">
           <ul class="about-list list">
             <li class="about-item">
@@ -89,6 +89,9 @@
               </p>
             </li>
           </ul>
+      </section>
+      <section class="about-content section">
+        <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="content list">
             <li class="content-img">
@@ -115,7 +118,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="section-team list">
