--- a/portfolio.html
+++ b/portfolio.html
@@ -26,25 +26,25 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="heder-link link" href="./index.html">Студия</a>
+              <a class="header-link link" href="./index.html">Студия</a>
             </li>
             <li class="header-item">
-              <a class="heder-link link current" href="./portfolio.html"
+              <a class="header-link link current" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
             <li class="header-item">
-              <a class="heder-link link" href="">Контакты</a>
+              <a class="header-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="header-connection list">
-          <li class="header-link">
+          <li class="header-connection-link">
             <a class="header-mail link" href="meiltoinfo@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-link">
+          <li class="header-connection-link">
             <a class="header-tell link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
@@ -53,7 +53,7 @@
       </div>
     </header>
     <main>
-      <section class="pruducts">
+      <section class="pruducts section">
         <div class="container">
           <h1 class="filter-title" hidden>Примеры работ</h1>
           <ul class="filter-list list">
@@ -73,8 +73,6 @@
               <button type="button" class="btn btn-marceting">Маркетинг</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="example-list list">
             <li class="example-item">
               <a href="" class="link">
@@ -84,8 +82,10 @@
                   alt="Веб-сайт"
                   width="370"
                 />
-                <h2 class="example-item-title">Технокряк</h2>
-                <p class="example-item-description">Веб-сайт</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">Технокряк</h2>
+                  <p class="example-item-description">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -96,10 +96,12 @@
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
                 />
-                <h2 class="example-item-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="example-item-description">Дизайн</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="example-item-description">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -110,8 +112,10 @@
                   alt="Постер ресторана Seafood"
                   width="370"
                 />
-                <h2 class="example-item-title">Ресторан Seafood</h2>
-                <p class="example-item-description">Приложение</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">Ресторан Seafood</h2>
+                  <p class="example-item-description">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -122,8 +126,10 @@
                   alt="Проект Prime"
                   width="370"
                 />
-                <h2 class="example-item-title">Проект Prime</h2>
-                <p class="example-item-description">Маркетинг</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">Проект Prime</h2>
+                  <p class="example-item-description">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -134,8 +140,10 @@
                   alt="Проект Boxes"
                   width="370"
                 />
-                <h2 class="example-item-title">Проект Boxes</h2>
-                <p class="example-item-description">Приложение</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">Проект Boxes</h2>
+                  <p class="example-item-description">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -146,10 +154,12 @@
                   alt="Пример работы веб-сайт"
                   width="370"
                 />
-                <h2 lang="en" class="example-item-title">
-                  Inspiration has no Borders
-                </h2>
-                <p class="example-item-description">Веб-сайт</p>
+                <div class="example-item-content">
+                  <h2 lang="en" class="example-item-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="example-item-description">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -160,8 +170,10 @@
                   alt="Издание Limited Edition"
                   width="370"
                 />
-                <h2 class="example-item-title">Издание Limited Edition</h2>
-                <p class="example-item-description">Дизайн</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">Издание Limited Edition</h2>
+                  <p class="example-item-description">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -172,8 +184,10 @@
                   alt="Проект LAB"
                   width="370"
                 />
-                <h2 class="example-item-title">Проект LAB</h2>
-                <p class="example-item-description">Маркетинг</p>
+                <div class="example-item-content">
+                  <h2 class="example-item-title">Проект LAB</h2>
+                  <p class="example-item-description">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="example-item">
@@ -184,8 +198,10 @@
                   alt="Приложение Growing Business"
                   width="370"
                 />
-                <h2 lang="en" class="example-item-title">Growing Business</h2>
-                <p class="example-item-description">Приложение</p>
+                <div class="example-item-content">
+                  <h2 lang="en" class="example-item-title">Growing Business</h2>
+                  <p class="example-item-description">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
